apps/minecraft-server/templates/default-deny-netpol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: minio
      podSelector:
        matchLabels:
          app: minio
  policyTypes:
  - Egress
  - Ingress
